--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
       }, []);
 
       useEffect(() => {
-        if (todos.length > 0 && !isTyping) {
+        if (todos.length > 0) {
           const timeoutId = setTimeout(() => {
             saveTodos();
           }, 1000);
           
           return () => clearTimeout(timeoutId);
         }
-      }, [todos, isTyping]);
+      }, [todos]);
 
       useEffect(() => {
         if (pizzaReviewDate !== null) {
@@ -504,8 +504,6 @@
                 type="text"
                 value={editTask}
                 onChange={(e) => setEditTask(e.target.value)}
-                onFocus={() => setIsTyping(true)}
-                onBlur={() => setIsTyping(false)}
                 className="w-full px-4 py-2 bg-gray-50 border-2 border-gray-200 rounded-xl focus:outline-none focus:ring-2 focus:ring-blue-400 focus:border-blue-400"
                 style={{ color: '#10122F' }}
                 autoFocus
@@ -587,14 +585,7 @@
                   <input
                     type="date"
                     value={editDate}
-                    onChange={(e) => {
-                      setIsTyping(true);
-                      setEditDate(e.target.value);
-                    }}
-                    onFocus={() => setIsTyping(true)}
-                    onBlur={() => {
-                      setTimeout(() => setIsTyping(false), 100);
-                    }}
+                    onChange={(e) => setEditDate(e.target.value)}
                     className="flex-1 min-w-[150px] px-3 py-2 bg-gray-50 border-2 border-gray-200 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-400"
                     style={{ color: '#10122F' }}
                   />
@@ -625,7 +616,6 @@
                 <button
                   onClick={(e) => {
                     e.stopPropagation();
-                    setIsTyping(false);
                     saveFullEdit();
                   }}
                   className="px-4 py-2 text-white rounded-lg hover:shadow-lg transition-all flex items-center gap-2"
@@ -636,7 +626,6 @@
                 <button
                   onClick={(e) => {
                     e.stopPropagation();
-                    setIsTyping(false);
                     cancelEdit();
                   }}
                   className="px-4 py-2 bg-gray-100 rounded-lg hover:bg-gray-200 transition-all flex items-center gap-2"
@@ -652,7 +641,6 @@
                 type="text"
                 value={editTask}
                 onChange={(e) => setEditTask(e.target.value)}
-                onFocus={() => setIsTyping(true)}
                 onBlur={() => {
                   setIsTyping(false);
                   saveTaskName(todo.id, editTask);
@@ -766,16 +754,8 @@
                           defaultValue={todo.date}
                           onChange={(e) => {
                             if (e.target.value) {
-                              setIsTyping(true);
-                              setTimeout(() => {
-                                quickChangeDateSpecific(todo.id, e.target.value);
-                                setIsTyping(false);
-                              }, 100);
+                              quickChangeDateSpecific(todo.id, e.target.value);
                             }
-                          }}
-                          onFocus={() => setIsTyping(true)}
-                          onBlur={() => {
-                            setTimeout(() => setIsTyping(false), 100);
                           }}
                           className="w-full px-4 py-3 border-2 rounded-xl focus:outline-none focus:ring-4 transition-all text-lg"
                           style={{ 
@@ -1351,14 +1331,7 @@
                     <input
                       type="date"
                       value={newDate}
-                      onChange={(e) => {
-                        setIsTyping(true);
-                        setNewDate(e.target.value);
-                      }}
-                      onFocus={() => setIsTyping(true)}
-                      onBlur={() => {
-                        setTimeout(() => setIsTyping(false), 100);
-                      }}
+                      onChange={(e) => setNewDate(e.target.value)}
                       className="px-4 py-2 border-2 rounded-xl focus:outline-none focus:ring-4 transition-all"
                       style={{ 
                         backgroundColor: '#f9fcfe',
